I added some style to the css file to become visible on the changes I made on all the pages of the site, and I also deleted the files that is no longer needed in the style.css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @media(max-width: 639px) {
   #nav-bar {
-    min-height: 48px;
+  min-height: 48px;
   }
 }
 /* Body styling */
@@ -22,11 +22,9 @@ div {
 }
 /* Navigation bar styling */
 .navbar {
+  font-weight: bold;
   text-align: center;
-  font-size: large;
-  font-weight: 700;
-  background-color:#000;
-  color: #881919;
+  color: #fff;
 }
 .navbar, ul li {
   float: none;
